--- a/commands.ui/package.json
+++ b/commands.ui/package.json
@@ -16,6 +16,7 @@
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
+    "svelte-copy-to-clipboard": "^0.2.5",
     "svelte-routing": "^1.4.2"
   },
   "dependencies": {
